# aiewf-eval

./: AGENTS.md  README.md  convo-test.py  judge_transcript_alt.py  judge_transcript_claude_v2.py  pyproject.toml  requirements.txt  run.sh
docs/: audio-alignment-analysis.md  audio-timing-deep-dive.md  nemotron-audio-in-implementation-plan.md  nemotron-upstream-dependency-plan.md
proj-2026-05-10-1941/: PLAN.md
proj-2026-05-10-1941/codex-jobs/: full-cache-turn-001-full.request.json  full-cache-turn-002-suffix.request.json  full-cache-turn-011.request.json  full-cache-turn-012.request.json  full-cache-turn-013.request.json  smoke1-nemotron-no-conversation-turn-001-attempt-01.request.json  smoke1-nemotron-no-conversation-turn-001-attempt-01.response.json  smoke2-nemotron-no-conversation-turn-001-attempt-01.request.json  smoke2-nemotron-no-conversation-turn-001-attempt-01.response.json  smoke2-nemotron-no-conversation-turn-002-attempt-01.request.json  smoke2-nemotron-no-conversation-turn-002-attempt-01.response.json  smoke3-suffix-turn-003-suffix-with-toolcall.request.json  smoke3-suffix-turn-004-disable-guard.request.json  smoke3-turn-003-tool-call.request.json  (+5 more)
scripts/: aggregate_walrus_sweep_n40.sh  analyze_ttfb_silero.py  analyze_turn_metrics.py  benchmark_summary.py  detect_audio_tags.py  judge_dolphin_sweep.sh  paced_input_transport.py  probe_realtime_session.py  probe_walrus_transcription.py  run_comprehensive_eval.py  tool_call_recorder.py  tts_stopped_assistant_transcript.py
tests/: test_audio_in_pipeline.py  test_nemotron_audio_in_service.py
(+23 files in other folders)
